# mailbox-notify

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml  release-docker.yml
src/cli/: __init__.py  mock_hue_bridge.py
src/mailbox_notify/: __init__.py  app.py  config.py  hue.py  pixoo.py  runtime_state.py  state.py
src/mailbox_notify/static/: index.css  index.html  index.js
tests/: test_app.py  test_config.py  test_hue.py  test_mock_hue_bridge.py  test_pixoo.py  test_runtime_state.py  test_state.py
