[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailbox-notify"
version = "0.1.0"
description = "Local mediator between a Philips Hue mailbox sensor and a Divoom Pixoo64"
requires-python = ">=3.11"
dependencies = [
  "aiohue>=4.8.1",
  "aiohttp>=3.9.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pixoo @ git+https://github.com/SomethingWithComputers/pixoo.git@v0.9.2",
  "uvicorn>=0.30.0",
]

[project.scripts]
mailbox-notify = "mailbox_notify.app:main"
mailbox-notify-mock-hue = "cli.mock_hue_bridge:main"

[dependency-groups]
dev = [
  "ruff>=0.11.0",
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mailbox_notify = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
